tests/models/struct/unnamed/i128/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2.0)]
    i128
);
fn main() {}
